[#20] - Extracted single music player component and fixed player overflow on mobile.

--- a/app/commons/header/header.less
+++ b/app/commons/header/header.less
@@ -45,14 +45,6 @@ header {
     .link;
   }
 
-  .music-player {
-    display: inline-block;
-    vertical-align: middle;
-    margin-left: 100px;
-
-    .link;
-  }
-
   .tool-bar {
     float: right;
     display: inline-block;
@@ -116,11 +108,5 @@ header {
   #search-text {
     color: #777;
     cursor: pointer;
-  }
-}
-
-@media screen and (max-width: 767px) {
-  .m-player {
-    margin-left: 10px !important;
   }
 }
