--- a/assets/styles/base.less
+++ b/assets/styles/base.less
@@ -26,5 +26,9 @@ body, html {
 @media screen and (max-width: 767px) {
   .m-hide {
     display: none;
+
+    &.menu {
+      display: none;
+    }
   }
 }
